--- a/home.html
+++ b/home.html
@@ -425,7 +425,7 @@
         <script type="text/javascript" src="js/jquery.inview.js"></script>
 
         <!-- Load google maps api and call initializeMap function defined in app.js -->
-        <script async="" defer="" type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyC8rlaBx1rPN254I6izwBzyyxAFe4yhQeQ&callback=initializeMap"></script>
+        <script async="" defer="" type="text/javascript" src="https://maps.googleapis.com/maps/api/js?callback=initializeMap"></script>
         <script type="text/javascript" src="js/app.js"></script>
     </body>
 </html>
